--- a/resources/index.html
+++ b/resources/index.html
@@ -7,6 +7,6 @@
     <script src="index.out.js"></script>
   </head>
   <body>
-    <a href="#" class="github-button">Follow @optimaff</a>
+    <a href="https://github.com/optimaff" data-size="large" data-icon="octicon-mark-github" aria-label="follow" class="github-button">Follow @optimaff</a>
   </body>
 </html>
