--- a/resources/buttons.html
+++ b/resources/buttons.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title></title>
+    <meta charset="utf-8">
+    <title>faa76404-3b97-5585-b449-4bc51338fbd1</title>
+    <base target="_blank"><!--[if lte IE 6]></base><![endif]-->
+    <link rel="stylesheet" href="octicons.lt-ie8.css">
+    <link rel="stylesheet" href="octicons.sizes.css">
+    <link rel="stylesheet" href="buttons.css">
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="octicons.lt-ie8.css">
+    <![endif]-->
+    <!--[if IE 8]>
+    <script>this.attachEvent("onload",function(){var e,t;e=document.getElementsByTagName("head")[0],t=document.createElement("style"),t.type="text/css",t.styleSheet.cssText=":before,:after{content:none!important;}",e.appendChild(t),setTimeout(function(){e.removeChild(t)})});</script>
+    <![endif]-->
+    <meta name="robots" content="noindex, nofollow">
   </head>
   <body>
+    <script src="index.out.js"></script>
   </body>
 </html>
