--- a/resources/buttons.html
+++ b/resources/buttons.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>faa76404-3b97-5585-b449-4bc51338fbd1</title>
     <base target="_blank"><!--[if lte IE 6]></base><![endif]-->
-    <link rel="stylesheet" href="octicons.lt-ie8.css">
+    <link rel="stylesheet" href="octicons.min.css">
     <link rel="stylesheet" href="octicons.sizes.css">
     <link rel="stylesheet" href="buttons.css">
     <!--[if lt IE 8]>
